plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.\
	maven {
		name = "Greenhouse Maven"
		url = 'https://repo.greenhouse.house/releases/'
	}
	maven { url "https://mvn.devos.one/releases/" } // Porting Lib
	maven {
		url "https://maven.jamieswhiteshirt.com/libs-release" // Reach Entity Attributes (Required by Porting Lib)
		content {
			includeGroup "com.jamieswhiteshirt"
		}
	}
	maven {
		url "https://jitpack.io/" // Fabric ASM
		content {
			excludeGroup "io.github.fabricators_of_create"
		}
	}
	maven { url = "https://maven.shedaniel.me" } // REI, Cloth Config
	maven {
		url "https://cursemaven.com"
		content {
			includeGroup("curse.maven")
		}
	} // Curse Maven
	maven {
		name = "TerraformersMC"
		url = "https://maven.terraformersmc.com/"
	} // Mod Menu & EMI
	maven {
		name 'Xander Maven'
		url 'https://maven.isxander.dev/releases'
	} // YACL
	maven {
		name = 'GeckoLib'
		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
		content {
			includeGroupByRegex("software\\.bernie.*")
			includeGroup("com.eliotlash.mclib")
		}
	} // GeckoLib
	maven { url 'https://maven.blamejared.com' } // Patchouli
}

fabricApi {
	configureDataGeneration()
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	// Fabric API
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
	// REI
	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
	// Mod Menu
	modCompileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")
	modLocalRuntime("com.terraformersmc:modmenu:${project.modmenu_version}")
	// EMI
	modCompileOnly "dev.emi:emi-fabric:${emi_version}+${minecraft_version}:api"
	modLocalRuntime "dev.emi:emi-fabric:${emi_version}+${minecraft_version}"
	// Geckolib
	include modApi("software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}")
	include modApi("com.eliotlash.mclib:mclib:20")
	// EnergyStorage
	include modApi("teamreborn:energy:${project.energy_version}")
	// YACL
	modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
	// Patchouli
	modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"

	// Local Runtime
	// Tech Reborn
	modLocalRuntime("curse.maven:techreborn-233564:6664367")
	// Reborn Corn
	modLocalRuntime("curse.maven:reborncore-237903:6664366")
	// Farmer's Delight
	modImplementation "curse.maven:farmers-delight-refabricated-993166:8088691"
	// Apple Skin
	modImplementation "curse.maven:appleskin-248787:5864741"
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.

	}
}